2005-03-09  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/sb-palmfan.el (shimbun-palmfan-group-path-alist):
	Comment out `palmwarefan'.

2005-03-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-zeit-de.el (shimbun-rss-build-message-id): Make it
	work even if there's no subdirectory in url.

	* w3m.el (w3m-modeline-title): Replace truncate-string-to-width
	with w3m-truncate-string.

	* w3m-util.el (w3m-truncate-string): Use truncate-string-to-width
	if it is available.

2005-03-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-info-like-map): Bind the `y' key to the
	w3m-print-current-url command; bind the `Y' key to the
	w3m-print-this-url command; don't bind the `c' key.

	* shimbun/sb-impress.el (shimbun-make-contents): Fix broken image
	tags.

	* shimbun/sb-bbdb-ml.el (shimbun-bbdb-ml-url): Update.

2005-03-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yahoo.el (shimbun-get-headers): Leave garbages around
	headers.

	* shimbun/sb-atmarkit.el (shimbun-atmarkit-use-base-url): New var.
	(shimbun-article-url): Switch the return value to the base url and
	the printing url according to shimbun-atmarkit-use-base-url.
	(shimbun-make-contents): Make shimbun-article-url return the base
	url rather than the printing url because links in the print page
	are relative to it.

2005-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-make-help-echo): Fix the backquote form.
	(w3m-make-balloon-help): Ditto.

	* w3m-util.el (w3m-set-match-data): Use existing markers.

2005-03-04  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-url-readable-string): Save matching data.  Check
	whether `w3m-current-url' is string before checking it.
	(w3m-goto-url-new-session, w3m-copy-buffer): Call `w3m-goto-url'
	with `redisplay' option to enforce redisplaying the certain
	content.

	* w3m-favicon.el (w3m-favicon-retrieve): Decode an URL when
	displaying it.

	* w3m-form.el (w3m-form-input-textarea-mode-setup): An expression